force-app/main/default/objects/Application__c/fields/CoverLetter__c.field-meta.xml
<CustomField>
    <fullName>CoverLetter__c</fullName>
    <description>Cover letter sent by the candidate</description>
    <label>Cover Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>