force-app/main/default/objects/Application__c/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <description>Default Application Record Type</description>
    <label>Application</label>
</RecordType>