force-app/main/default/objects/Application__c/listViews/MyApplicationLast30days.listView-meta.xml
<ListView>
    <fullName>MyApplicationLast30days</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Application (Last 30 days)</label>
</ListView>