force-app/main/default/objects/Application__c/listViews/OpenApplications.listView-meta.xml
<ListView>
    <fullName>OpenApplications</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Candidate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Applications</label>
</ListView>